--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,7 +50,7 @@ header {
 
     .nav-links {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       width: 60vw;
 
       li {
